// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Offer snapshot (ViewMode.Favorite) 1`] = `
<article
  class="place-card favorites__card"
>
  <div
    class="place-card__image-wrapper favorites__image-wrapper"
  >
    <a
      xlink:href="#"
    >
      <img
        alt="Place image"
        class="place-card__image"
        height="110"
        src="img/apartment-01.jpg"
        width="150"
      />
    </a>
  </div>
  <div
    class="place-card__info favorites__card-info"
  >
    <div
      class="place-card__price-wrapper"
    >
      <div
        class="place-card__price"
      >
        <b
          class="place-card__price-value"
        >
          €
          120
        </b>
        <span
          class="place-card__price-text"
        >
          / night
        </span>
      </div>
      <button
        class="place-card__bookmark-button button "
        type="button"
      >
        <svg
          class="place-card__bookmark-icon"
          height="19"
          width="18"
        >
          <use
            xlink:href="#icon-bookmark"
          />
        </svg>
        <span
          class="visually-hidden"
        >
          To bookmarks
        </span>
      </button>
    </div>
    <div
      class="place-card__rating rating"
    >
      <div
        class="place-card__stars rating__stars"
      >
        <span
          style="width: 80%;"
        />
        <span
          class="visually-hidden"
        >
          Rating
        </span>
      </div>
    </div>
    <h2
      class="place-card__name"
    >
      <a
        href="/offer/1"
      >
        Beautiful & luxurious apartment at great location
      </a>
    </h2>
    <p
      class="place-card__type"
    >
      Apartment
    </p>
  </div>
</article>
`;

exports[`Offer snapshot (ViewMode.Main) 1`] = `
<article
  class="place-card cities__place-card"
>
  <div
    class="place-card__mark"
  >
    <span>
      Premium
    </span>
  </div>
  <div
    class="place-card__image-wrapper cities__image-wrapper"
  >
    <a
      xlink:href="#"
    >
      <img
        alt="Place image"
        class="place-card__image"
        height="200"
        src="img/apartment-01.jpg"
        width="260"
      />
    </a>
  </div>
  <div
    class="place-card__info "
  >
    <div
      class="place-card__price-wrapper"
    >
      <div
        class="place-card__price"
      >
        <b
          class="place-card__price-value"
        >
          €
          120
        </b>
        <span
          class="place-card__price-text"
        >
          / night
        </span>
      </div>
      <button
        class="place-card__bookmark-button button "
        type="button"
      >
        <svg
          class="place-card__bookmark-icon"
          height="19"
          width="18"
        >
          <use
            xlink:href="#icon-bookmark"
          />
        </svg>
        <span
          class="visually-hidden"
        >
          To bookmarks
        </span>
      </button>
    </div>
    <div
      class="place-card__rating rating"
    >
      <div
        class="place-card__stars rating__stars"
      >
        <span
          style="width: 80%;"
        />
        <span
          class="visually-hidden"
        >
          Rating
        </span>
      </div>
    </div>
    <h2
      class="place-card__name"
    >
      <a
        href="/offer/1"
      >
        Beautiful & luxurious apartment at great location
      </a>
    </h2>
    <p
      class="place-card__type"
    >
      Apartment
    </p>
  </div>
</article>
`;

exports[`Offer snapshot (ViewMode.Property) 1`] = `
<article
  class="place-card near-places__card"
>
  <div
    class="place-card__mark"
  >
    <span>
      Premium
    </span>
  </div>
  <div
    class="place-card__image-wrapper near-places__image-wrapper"
  >
    <a
      xlink:href="#"
    >
      <img
        alt="Place image"
        class="place-card__image"
        height="200"
        src="img/apartment-01.jpg"
        width="260"
      />
    </a>
  </div>
  <div
    class="place-card__info "
  >
    <div
      class="place-card__price-wrapper"
    >
      <div
        class="place-card__price"
      >
        <b
          class="place-card__price-value"
        >
          €
          120
        </b>
        <span
          class="place-card__price-text"
        >
          / night
        </span>
      </div>
      <button
        class="place-card__bookmark-button button "
        type="button"
      >
        <svg
          class="place-card__bookmark-icon"
          height="19"
          width="18"
        >
          <use
            xlink:href="#icon-bookmark"
          />
        </svg>
        <span
          class="visually-hidden"
        >
          To bookmarks
        </span>
      </button>
    </div>
    <div
      class="place-card__rating rating"
    >
      <div
        class="place-card__stars rating__stars"
      >
        <span
          style="width: 80%;"
        />
        <span
          class="visually-hidden"
        >
          Rating
        </span>
      </div>
    </div>
    <h2
      class="place-card__name"
    >
      <a
        href="/offer/1"
      >
        Beautiful & luxurious apartment at great location
      </a>
    </h2>
    <p
      class="place-card__type"
    >
      Apartment
    </p>
  </div>
</article>
`;
